--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="circle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hasan Piker 9/11 - Educational Resource | hasanpiker911.com</title>
     <meta name="description" content="Educational resource about Hasan Piker, the 9/11 controversy, and the political context surrounding Cuomo's campaign ad. Learn the facts behind the controversy.">
