Refactor project to focus on new application: Replace educational content with "Focus Zone" AI-powered focus tracker. Update metadata in index.html, modify package.json and package-lock.json for new dependencies, and remove unused components related to previous content.

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="circle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hasan Piker 9/11 - Educational Resource | hasanpiker911.com</title>
-    <meta name="description" content="Educational resource about Hasan Piker, the 9/11 controversy, and the political context surrounding Cuomo's campaign ad. Learn the facts behind the controversy.">
-    <meta name="keywords" content="Hasan Piker, 9/11, Cuomo, campaign ad, political controversy, educational resource">
-    <meta property="og:title" content="Hasan Piker 9/11 - Educational Resource">
-    <meta property="og:description" content="Educational resource about Hasan Piker, the 9/11 controversy, and the political context surrounding Cuomo's campaign ad.">
+    <title>Focus Zone - AI-Powered Focus Tracker</title>
+    <meta name="description" content="AI-powered focus tracking application with gesture controls. Monitor your attention and productivity in real-time using computer vision.">
+    <meta name="keywords" content="focus tracker, productivity, AI, computer vision, gesture control, attention monitoring">
+    <meta property="og:title" content="Focus Zone - AI-Powered Focus Tracker">
+    <meta property="og:description" content="AI-powered focus tracking application with gesture controls. Monitor your attention and productivity in real-time.">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Hasan Piker 9/11 - Educational Resource">
-    <meta name="twitter:description" content="Educational resource about Hasan Piker, the 9/11 controversy, and the political context surrounding Cuomo's campaign ad.">
+    <meta name="twitter:title" content="Focus Zone - AI-Powered Focus Tracker">
+    <meta name="twitter:description" content="AI-powered focus tracking application with gesture controls. Monitor your attention and productivity in real-time.">
   </head>
   <body>
     <div id="root"></div>
